--- a/vivado/sounder_fr3_if_ddr4_4x2/project.srcs/sources_1/bd/system_bd/ui/bd_741e77f6.ui
+++ b/vivado/sounder_fr3_if_ddr4_4x2/project.srcs/sources_1/bd/system_bd/ui/bd_741e77f6.ui
@@ -1,48 +1,52 @@
 {
    "ActiveEmotionalView":"Default View",
-   "Default View_ScaleFactor":"1.27781",
-   "Default View_TopLeft":"-149,-157",
+   "Default View_ScaleFactor":"1.00268",
+   "Default View_TopLeft":"-149,-258",
    "ExpandedHierarchyInLayout":"",
    "guistr":"# # String gsaved with Nlview 7.0r6  2020-01-29 bk=1.5227 VDI=41 GEI=36 GUI=JA:10.0 non-TLS
 #  -string -flagsOSRD
-preplace port M01_AXIS -pg 1 -lvl 6 -x 1510 -y 360 -defaultsOSRD
-preplace port S_AXIS -pg 1 -lvl 0 -x 0 -y 230 -defaultsOSRD
-preplace port port-id_dac_clk -pg 1 -lvl 0 -x 0 -y 320 -defaultsOSRD
-preplace port port-id_dac_resetn -pg 1 -lvl 0 -x 0 -y 90 -defaultsOSRD
-preplace port port-id_ddr4_clk -pg 1 -lvl 0 -x 0 -y 290 -defaultsOSRD
-preplace port port-id_ddr4_resetn -pg 1 -lvl 0 -x 0 -y 260 -defaultsOSRD
-preplace portBus Din -pg 1 -lvl 0 -x 0 -y 390 -defaultsOSRD
-preplace portBus dac_control -pg 1 -lvl 0 -x 0 -y 170 -defaultsOSRD
-preplace inst axis_broadcaster_1 -pg 1 -lvl 5 -x 1310 -y 350 -defaultsOSRD
-preplace inst axis_data_fifo_0 -pg 1 -lvl 1 -x 160 -y 90 -defaultsOSRD
-preplace inst axis_data_fifo_1 -pg 1 -lvl 1 -x 160 -y 260 -defaultsOSRD
-preplace inst axis_data_fifo_2 -pg 1 -lvl 3 -x 700 -y 310 -defaultsOSRD
-preplace inst axis_register_slice_0 -pg 1 -lvl 4 -x 970 -y 330 -defaultsOSRD
-preplace inst control_tready -pg 1 -lvl 5 -x 1310 -y 180 -defaultsOSRD
-preplace inst control_tvalid -pg 1 -lvl 4 -x 970 -y 110 -defaultsOSRD
-preplace inst dac_strm_mux -pg 1 -lvl 2 -x 430 -y 290 -defaultsOSRD
-preplace inst xlslice_0 -pg 1 -lvl 1 -x 160 -y 390 -defaultsOSRD
-preplace netloc Din_1 1 0 1 NJ 390
-preplace netloc Op2_1 1 0 5 NJ 170 NJ 170 NJ 170 820 190 NJ
-preplace netloc axis_broadcaster_1_s_axis_tready 1 4 1 1140 170n
-preplace netloc axis_register_slice_0_m_axis_tvalid 1 3 2 830 180 1110
-preplace netloc ddr4_0_c0_ddr4_ui_clk 1 0 1 30J 270n
-preplace netloc m_axis_aclk_1 1 0 5 40 450 290 470 580 390 820 410 1120J
-preplace netloc util_vector_logic_0_Res 1 0 5 20 460 NJ 460 570 400 830 420 1140J
-preplace netloc util_vector_logic_0_Res1 1 4 2 1120 250 1480
-preplace netloc util_vector_logic_1_Res 1 0 1 30J 250n
-preplace netloc util_vector_logic_1_Res1 1 4 1 1130 110n
-preplace netloc xlslice_0_Dout 1 1 1 280J 300n
-preplace netloc axis_broadcaster_1_M00_AXIS 1 0 6 20 10 NJ 10 NJ 10 NJ 10 NJ 10 1490
-preplace netloc axis_data_fifo_0_M_AXIS 1 1 1 280 90n
-preplace netloc axis_data_fifo_1_M_AXIS 1 1 1 N 260
-preplace netloc axis_data_fifo_2_M_AXIS 1 3 1 N 310
-preplace netloc axis_register_slice_0_M_AXIS 1 4 1 N 310
-preplace netloc dac_strm_mux_m0_axi_stream 1 2 1 N 290
-preplace netloc dma_dac_0_M_AXIS_MM2S 1 0 1 NJ 230
-preplace netloc axis_broadcaster_1_M01_AXIS 1 5 1 N 360
-levelinfo -pg 1 0 160 430 700 970 1310 1510
-pagesize -pg 1 -db -bbox -sgen -150 0 1630 480
+preplace port M01_AXIS -pg 1 -lvl 8 -x 1980 -y 290 -defaultsOSRD
+preplace port S_AXIS -pg 1 -lvl 0 -x 0 -y 290 -defaultsOSRD
+preplace port port-id_dac_clk -pg 1 -lvl 0 -x 0 -y 230 -defaultsOSRD
+preplace port port-id_dac_resetn -pg 1 -lvl 0 -x 0 -y 400 -defaultsOSRD
+preplace port port-id_ddr4_clk -pg 1 -lvl 0 -x 0 -y 320 -defaultsOSRD
+preplace port port-id_ddr4_resetn -pg 1 -lvl 0 -x 0 -y 350 -defaultsOSRD
+preplace portBus Din -pg 1 -lvl 0 -x 0 -y 90 -defaultsOSRD
+preplace portBus dac_control -pg 1 -lvl 0 -x 0 -y 20 -defaultsOSRD
+preplace inst axis_broadcaster_1 -pg 1 -lvl 7 -x 1780 -y 280 -defaultsOSRD
+preplace inst axis_data_fifo_0 -pg 1 -lvl 3 -x 630 -y 210 -defaultsOSRD
+preplace inst axis_data_fifo_1 -pg 1 -lvl 3 -x 630 -y 370 -defaultsOSRD
+preplace inst axis_data_fifo_2 -pg 1 -lvl 5 -x 1170 -y 240 -defaultsOSRD
+preplace inst axis_register_slice_0 -pg 1 -lvl 6 -x 1440 -y 260 -defaultsOSRD
+preplace inst control_tready -pg 1 -lvl 7 -x 1780 -y 110 -defaultsOSRD
+preplace inst control_tvalid -pg 1 -lvl 6 -x 1440 -y 80 -defaultsOSRD
+preplace inst dac_strm_mux -pg 1 -lvl 4 -x 900 -y 220 -defaultsOSRD
+preplace inst xlslice_0 -pg 1 -lvl 3 -x 630 -y 90 -defaultsOSRD
+preplace inst axis_clock_converter_0 -pg 1 -lvl 2 -x 370 -y 350 -defaultsOSRD
+preplace inst axis_register_slice_1 -pg 1 -lvl 1 -x 130 -y 310 -defaultsOSRD
+preplace netloc Din_1 1 0 3 NJ 90 NJ 90 NJ
+preplace netloc Op2_1 1 0 7 NJ 20 NJ 20 NJ 20 NJ 20 NJ 20 1290 160 1590J
+preplace netloc axis_broadcaster_1_s_axis_tready 1 6 1 1610 100n
+preplace netloc axis_register_slice_0_m_axis_tvalid 1 5 2 1300 150 1580
+preplace netloc m_axis_aclk_1 1 0 7 NJ 230 240 230 490 290 760 310 1050 320 1290 340 1590J
+preplace netloc util_vector_logic_0_Res 1 0 7 NJ 400 250 450 500 30 NJ 30 1040 330 1300 350 1610J
+preplace netloc util_vector_logic_0_Res1 1 6 2 1590 180 1950
+preplace netloc util_vector_logic_1_Res 1 0 2 20 220 230J
+preplace netloc util_vector_logic_1_Res1 1 6 1 1600 80n
+preplace netloc xlslice_0_Dout 1 3 1 760J 90n
+preplace netloc ddr4_clk_1 1 0 2 30 390 230J
+preplace netloc axis_broadcaster_1_M00_AXIS 1 2 6 510 10 NJ 10 NJ 10 NJ 10 NJ 10 1960
+preplace netloc axis_broadcaster_1_M01_AXIS 1 7 1 N 290
+preplace netloc axis_data_fifo_0_M_AXIS 1 3 1 N 210
+preplace netloc axis_data_fifo_1_M_AXIS 1 3 1 750 190n
+preplace netloc axis_data_fifo_2_M_AXIS 1 5 1 N 240
+preplace netloc axis_register_slice_0_M_AXIS 1 6 1 N 240
+preplace netloc dac_strm_mux_m0_axi_stream 1 4 1 N 220
+preplace netloc axis_clock_converter_0_M_AXIS 1 2 1 N 350
+preplace netloc S_AXIS_1 1 0 1 NJ 290
+preplace netloc axis_register_slice_1_M_AXIS 1 1 1 N 310
+levelinfo -pg 1 0 130 370 630 900 1170 1440 1780 1980
+pagesize -pg 1 -db -bbox -sgen -150 0 2100 460
 "
 }
 0
