Updated Vivado projects

--- a/vivado/sounder_fr3_if_2x2/Sounder_FR3_BW_Corr.srcs/sources_1/bd/design_1/ui/bd_51515ff5.ui
+++ b/vivado/sounder_fr3_if_2x2/Sounder_FR3_BW_Corr.srcs/sources_1/bd/design_1/ui/bd_51515ff5.ui
@@ -1,7 +1,7 @@
 {
    "ActiveEmotionalView":"Default View",
-   "Default View_ScaleFactor":"1.95341",
-   "Default View_TopLeft":"-114,182",
+   "Default View_ScaleFactor":"0.740204",
+   "Default View_TopLeft":"420,-81",
    "ExpandedHierarchyInLayout":"",
    "guistr":"# # String gsaved with Nlview 7.5.8 2022-09-21 7111 VDI=41 GEI=38 GUI=JA:10.0 TLS
 #  -string -flagsOSRD
