Updated MIMO and debugged FPGA projects

--- a/vivado/sounder_bbf_sivers_ddr4_4x2/project.srcs/sources_1/bd/system_bd/ui/bd_948c21b0.ui
+++ b/vivado/sounder_bbf_sivers_ddr4_4x2/project.srcs/sources_1/bd/system_bd/ui/bd_948c21b0.ui
@@ -5,44 +5,44 @@
    "ExpandedHierarchyInLayout":"",
    "guistr":"# # String gsaved with Nlview 7.0r4  2019-12-20 bk=1.5203 VDI=41 GEI=36 GUI=JA:10.0 TLS
 #  -string -flagsOSRD
-preplace port DAC0_AXIS -pg 1 -lvl 3 -x 660 -y 100 -defaultsOSRD
-preplace port DAC1_AXIS -pg 1 -lvl 3 -x 660 -y 120 -defaultsOSRD
-preplace port PL_MEM_AXI -pg 1 -lvl 3 -x 660 -y 330 -defaultsOSRD
-preplace port PS_MEM_AXI -pg 1 -lvl 3 -x 660 -y 310 -defaultsOSRD
-preplace port S_AXI_LITE -pg 1 -lvl 0 -x 0 -y 300 -defaultsOSRD
-preplace port port-id_dac_clk -pg 1 -lvl 0 -x 0 -y 50 -defaultsOSRD
-preplace port port-id_dac_control -pg 1 -lvl 0 -x 0 -y 230 -defaultsOSRD
-preplace port port-id_dac_resetn -pg 1 -lvl 0 -x 0 -y 140 -defaultsOSRD
-preplace port port-id_ddr4_clk -pg 1 -lvl 0 -x 0 -y 340 -defaultsOSRD
-preplace port port-id_ddr4_resetn_1 -pg 1 -lvl 0 -x 0 -y 180 -defaultsOSRD
-preplace port port-id_mm2s_introut -pg 1 -lvl 3 -x 660 -y 400 -defaultsOSRD
-preplace port port-id_ps8_clk -pg 1 -lvl 0 -x 0 -y 320 -defaultsOSRD
-preplace port port-id_ps8_resetn -pg 1 -lvl 0 -x 0 -y 360 -defaultsOSRD
-preplace portBus Din -pg 1 -lvl 0 -x 0 -y 30 -defaultsOSRD
-preplace inst mem -pg 1 -lvl 2 -x 510 -y 110 -defaultsOSRD
+preplace port DAC0_AXIS -pg 1 -lvl 3 -x 2750 -y 90 -defaultsOSRD
+preplace port DAC1_AXIS -pg 1 -lvl 3 -x 2750 -y 120 -defaultsOSRD
+preplace port PL_MEM_AXI -pg 1 -lvl 3 -x 2750 -y 330 -defaultsOSRD
+preplace port PS_MEM_AXI -pg 1 -lvl 3 -x 2750 -y 300 -defaultsOSRD
+preplace port S_AXI_LITE -pg 1 -lvl 0 -x -40 -y 270 -defaultsOSRD
+preplace port port-id_dac_clk -pg 1 -lvl 0 -x -40 -y 50 -defaultsOSRD
+preplace port port-id_dac_control -pg 1 -lvl 0 -x -40 -y 230 -defaultsOSRD
+preplace port port-id_dac_resetn -pg 1 -lvl 0 -x -40 -y 140 -defaultsOSRD
+preplace port port-id_ddr4_clk -pg 1 -lvl 0 -x -40 -y 330 -defaultsOSRD
+preplace port port-id_ddr4_resetn_1 -pg 1 -lvl 0 -x -40 -y 180 -defaultsOSRD
+preplace port port-id_mm2s_introut -pg 1 -lvl 3 -x 2750 -y 400 -defaultsOSRD
+preplace port port-id_ps8_clk -pg 1 -lvl 0 -x -40 -y 300 -defaultsOSRD
+preplace port port-id_ps8_resetn -pg 1 -lvl 0 -x -40 -y 360 -defaultsOSRD
+preplace portBus Din -pg 1 -lvl 0 -x -40 -y 20 -defaultsOSRD
+preplace inst mem -pg 1 -lvl 2 -x 670 -y 112 -defaultsOSRD
 preplace inst soft_reset -pg 1 -lvl 1 -x 190 -y 140 -defaultsOSRD
 preplace inst axi_dma_0 -pg 1 -lvl 1 -x 190 -y 330 -defaultsOSRD
-preplace inst smartconnect_0 -pg 1 -lvl 2 -x 510 -y 320 -defaultsOSRD
-preplace netloc Din_1 1 0 2 20 30 380
-preplace netloc Op2_1 1 0 2 NJ 230 360J
+preplace inst smartconnect_0 -pg 1 -lvl 2 -x 670 -y 684 -defaultsOSRD
+preplace netloc Din_1 1 0 2 10 20 420
+preplace netloc Op2_1 1 0 2 NJ 230 410J
 preplace netloc dac_resetn_1 1 0 1 NJ 140
-preplace netloc ddr4_0_c0_ddr4_ui_clk 1 0 2 30 240 380
-preplace netloc dma_dac_0_mm2s_introut 1 1 2 350J 400 NJ
-preplace netloc m_axis_aclk_1 1 0 2 30 40 360
-preplace netloc rst_ddr4_200M_peripheral_aresetn 1 0 2 20 420 370J
+preplace netloc ddr4_0_c0_ddr4_ui_clk 1 0 2 0 30 390
+preplace netloc dma_dac_0_mm2s_introut 1 1 2 370J 400 NJ
+preplace netloc m_axis_aclk_1 1 0 2 20 40 410
+preplace netloc rst_ddr4_200M_peripheral_aresetn 1 0 2 10 240 360J
 preplace netloc rst_ps8_100M_peripheral_aresetn 1 0 1 NJ 360
-preplace netloc util_vector_logic_0_Res 1 1 1 N 130
-preplace netloc util_vector_logic_1_Res 1 1 1 370 150n
-preplace netloc zynq_ultra_ps_e_0_pl_clk0 1 0 1 NJ 320
-preplace netloc Conn1 1 2 1 NJ 100
-preplace netloc Conn2 1 2 1 NJ 120
-preplace netloc axi_dma_0_M_AXI_MM2S 1 1 1 N 300
-preplace netloc dma_dac_0_M_AXIS_MM2S 1 1 1 350 50n
-preplace netloc ps8_axi_periph_M00_AXI 1 0 1 NJ 300
-preplace netloc smartconnect_0_M00_AXI 1 2 1 NJ 310
-preplace netloc smartconnect_0_M01_AXI 1 2 1 NJ 330
-levelinfo -pg 1 0 190 510 660
-pagesize -pg 1 -db -bbox -sgen -150 0 800 430
+preplace netloc util_vector_logic_0_Res 1 1 1 420 130n
+preplace netloc util_vector_logic_1_Res 1 1 1 360 150n
+preplace netloc zynq_ultra_ps_e_0_pl_clk0 1 0 1 -20J 300n
+preplace netloc Conn1 1 2 1 810J 90n
+preplace netloc Conn2 1 2 1 810J 120n
+preplace netloc axi_dma_0_M_AXI_MM2S 1 1 1 380 300n
+preplace netloc dma_dac_0_M_AXIS_MM2S 1 1 1 400 52n
+preplace netloc ps8_axi_periph_M00_AXI 1 0 1 -10J 270n
+preplace netloc smartconnect_0_M00_AXI 1 2 1 810J 300n
+preplace netloc smartconnect_0_M01_AXI 1 2 1 820J 330n
+levelinfo -pg 1 -40 190 670 2750
+pagesize -pg 1 -db -bbox -sgen -190 -30 2900 780
 "
 }
-
+0
