--- a/vivado/sounder_bbf_sivers_ddr4_4x2/project.srcs/sources_1/bd/system_bd/ui/bd_741e77f6.ui
+++ b/vivado/sounder_bbf_sivers_ddr4_4x2/project.srcs/sources_1/bd/system_bd/ui/bd_741e77f6.ui
@@ -1,52 +1,56 @@
 {
    "ActiveEmotionalView":"Default View",
-   "Default View_ScaleFactor":"0.50427",
-   "Default View_TopLeft":"-389,-377",
+   "Default View_ScaleFactor":"0.819189",
+   "Default View_TopLeft":"-784,-50",
    "ExpandedHierarchyInLayout":"",
    "guistr":"# # String gsaved with Nlview 7.0r4  2019-12-20 bk=1.5203 VDI=41 GEI=36 GUI=JA:10.0 TLS
 #  -string -flagsOSRD
-preplace port M01_AXIS -pg 1 -lvl 7 -x 1940 -y 190 -defaultsOSRD
-preplace port M02_AXIS -pg 1 -lvl 7 -x 1940 -y 210 -defaultsOSRD
-preplace port S_AXIS -pg 1 -lvl 0 -x 0 -y 70 -defaultsOSRD
-preplace port port-id_dac_clk -pg 1 -lvl 0 -x 0 -y 130 -defaultsOSRD
-preplace port port-id_dac_resetn -pg 1 -lvl 0 -x 0 -y 270 -defaultsOSRD
-preplace port port-id_ddr4_clk -pg 1 -lvl 0 -x 0 -y 110 -defaultsOSRD
-preplace port port-id_ddr4_resetn -pg 1 -lvl 0 -x 0 -y 90 -defaultsOSRD
-preplace portBus Din -pg 1 -lvl 0 -x 0 -y 410 -defaultsOSRD
-preplace portBus dac_control -pg 1 -lvl 0 -x 0 -y 190 -defaultsOSRD
-preplace inst axis_broadcaster_1 -pg 1 -lvl 5 -x 1410 -y 170 -defaultsOSRD
-preplace inst axis_broadcaster_2 -pg 1 -lvl 6 -x 1760 -y 200 -defaultsOSRD
-preplace inst axis_data_fifo_0 -pg 1 -lvl 1 -x 160 -y 270 -defaultsOSRD
-preplace inst axis_data_fifo_1 -pg 1 -lvl 1 -x 160 -y 100 -defaultsOSRD
-preplace inst axis_data_fifo_2 -pg 1 -lvl 3 -x 750 -y 300 -defaultsOSRD
-preplace inst axis_register_slice_0 -pg 1 -lvl 4 -x 1040 -y 320 -defaultsOSRD
-preplace inst control_tready -pg 1 -lvl 5 -x 1410 -y 410 -defaultsOSRD
-preplace inst control_tvalid -pg 1 -lvl 4 -x 1040 -y 170 -defaultsOSRD
-preplace inst dac_strm_mux -pg 1 -lvl 2 -x 470 -y 280 -defaultsOSRD
-preplace inst xlslice_0 -pg 1 -lvl 1 -x 160 -y 410 -defaultsOSRD
-preplace netloc Din_1 1 0 1 NJ 410
-preplace netloc Op2_1 1 0 5 NJ 190 280J 170 NJ 170 870 240 1210
-preplace netloc axis_broadcaster_1_s_axis_tready 1 4 1 1230 150n
-preplace netloc axis_register_slice_0_m_axis_tvalid 1 3 2 890 400 1190
-preplace netloc ddr4_0_c0_ddr4_ui_clk 1 0 1 NJ 110
-preplace netloc m_axis_aclk_1 1 0 6 30 470 310 190 620 380 870 410 1220 270 1590J
-preplace netloc util_vector_logic_0_Res 1 0 6 20 350 290J 180 630 390 880 420 1200 280 1600J
-preplace netloc util_vector_logic_0_Res1 1 4 2 N 340 1600
-preplace netloc util_vector_logic_1_Res 1 0 1 NJ 90
-preplace netloc util_vector_logic_1_Res1 1 4 1 N 170
-preplace netloc xlslice_0_Dout 1 1 1 320J 290n
-preplace netloc axis_broadcaster_1_M00_AXIS 1 0 6 40 10 NJ 10 NJ 10 NJ 10 NJ 10 1590
-preplace netloc axis_broadcaster_1_M01_AXIS 1 5 1 N 180
-preplace netloc axis_broadcaster_2_M00_AXIS 1 6 1 NJ 190
-preplace netloc axis_broadcaster_2_M01_AXIS 1 6 1 NJ 210
-preplace netloc axis_data_fifo_0_M_AXIS 1 1 1 N 270
-preplace netloc axis_data_fifo_1_M_AXIS 1 1 1 300 100n
-preplace netloc axis_data_fifo_2_M_AXIS 1 3 1 N 300
-preplace netloc axis_register_slice_0_M_AXIS 1 4 1 1190 130n
-preplace netloc dac_strm_mux_m0_axi_stream 1 2 1 N 280
-preplace netloc dma_dac_0_M_AXIS_MM2S 1 0 1 NJ 70
-levelinfo -pg 1 0 160 470 750 1040 1410 1760 1940
-pagesize -pg 1 -db -bbox -sgen -170 0 2060 480
+preplace port M01_AXIS -pg 1 -lvl 9 -x 1820 -y 180 -defaultsOSRD
+preplace port M02_AXIS -pg 1 -lvl 9 -x 1820 -y 210 -defaultsOSRD
+preplace port S_AXIS -pg 1 -lvl 0 -x -760 -y 40 -defaultsOSRD
+preplace port port-id_dac_clk -pg 1 -lvl 0 -x -760 -y 130 -defaultsOSRD
+preplace port port-id_dac_resetn -pg 1 -lvl 0 -x -760 -y 270 -defaultsOSRD
+preplace port port-id_ddr4_clk -pg 1 -lvl 0 -x -760 -y 100 -defaultsOSRD
+preplace port port-id_ddr4_resetn -pg 1 -lvl 0 -x -760 -y 70 -defaultsOSRD
+preplace portBus Din -pg 1 -lvl 0 -x -760 -y 160 -defaultsOSRD
+preplace portBus dac_control -pg 1 -lvl 0 -x -760 -y 190 -defaultsOSRD
+preplace inst axis_broadcaster_1 -pg 1 -lvl 7 -x 1310 -y 170 -defaultsOSRD
+preplace inst axis_broadcaster_2 -pg 1 -lvl 8 -x 1650 -y 200 -defaultsOSRD
+preplace inst axis_data_fifo_0 -pg 1 -lvl 3 -x 40 -y 270 -defaultsOSRD
+preplace inst axis_data_fifo_1 -pg 1 -lvl 3 -x 40 -y 450 -defaultsOSRD
+preplace inst axis_data_fifo_2 -pg 1 -lvl 5 -x 640 -y 300 -defaultsOSRD
+preplace inst axis_register_slice_0 -pg 1 -lvl 6 -x 940 -y 320 -defaultsOSRD
+preplace inst control_tready -pg 1 -lvl 7 -x 1310 -y 410 -defaultsOSRD
+preplace inst control_tvalid -pg 1 -lvl 6 -x 940 -y 170 -defaultsOSRD
+preplace inst dac_strm_mux -pg 1 -lvl 4 -x 350 -y 420 -defaultsOSRD
+preplace inst xlslice_0 -pg 1 -lvl 3 -x 40 -y 120 -defaultsOSRD
+preplace inst axis_register_slice_1 -pg 1 -lvl 1 -x -600 -y 430 -defaultsOSRD
+preplace inst axis_clock_converter_0 -pg 1 -lvl 2 -x -330 -y 450 -defaultsOSRD
+preplace netloc Din_1 1 0 3 NJ 160 N 160 -210
+preplace netloc Op2_1 1 0 7 NJ 190 N 190 N 190 NJ 190 NJ 190 780 240 1100
+preplace netloc axis_broadcaster_1_s_axis_tready 1 6 1 1140 150n
+preplace netloc axis_register_slice_0_m_axis_tvalid 1 5 2 780 90 1090
+preplace netloc ddr4_0_c0_ddr4_ui_clk 1 0 2 -740J 340 -490
+preplace netloc m_axis_aclk_1 1 0 8 -720 170 -480 290 -210 360 190 320 510 380 770 100 1110 270 1500J
+preplace netloc util_vector_logic_0_Res 1 0 8 N 270 -450 270 -190 350 160J 330 520 390 760 80 1130 70 1490J
+preplace netloc util_vector_logic_0_Res1 1 6 2 N 340 1480
+preplace netloc util_vector_logic_1_Res 1 0 2 -730J 350 -460
+preplace netloc util_vector_logic_1_Res1 1 6 1 N 170
+preplace netloc xlslice_0_Dout 1 3 1 180J 120n
+preplace netloc axis_broadcaster_1_M00_AXIS 1 2 6 -190 60 NJ 60 NJ 60 NJ 60 NJ 60 1480
+preplace netloc axis_broadcaster_1_M01_AXIS 1 7 1 N 180
+preplace netloc axis_broadcaster_2_M00_AXIS 1 8 1 1800J 180n
+preplace netloc axis_broadcaster_2_M01_AXIS 1 8 1 NJ 210
+preplace netloc axis_data_fifo_0_M_AXIS 1 3 1 170 270n
+preplace netloc axis_data_fifo_1_M_AXIS 1 3 1 160 390n
+preplace netloc axis_data_fifo_2_M_AXIS 1 5 1 N 300
+preplace netloc axis_register_slice_0_M_AXIS 1 6 1 1120 130n
+preplace netloc dac_strm_mux_m0_axi_stream 1 4 1 500 280n
+preplace netloc S_AXIS_1 1 0 1 -710 40n
+preplace netloc axis_register_slice_1_M_AXIS 1 1 1 -470 410n
+preplace netloc axis_clock_converter_0_M_AXIS 1 2 1 -200 430n
+levelinfo -pg 1 -760 -600 -330 40 350 640 940 1310 1650 1820
+pagesize -pg 1 -db -bbox -sgen -920 -100 1940 650
 "
 }
-
+0
